--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -3,6 +3,8 @@ zh-CN:
     models:
       admin: 管理员
       user: 用户
+      prize: 奖品
+      record: 记录
     attributes:
       admin:
         name: 用户名
@@ -16,8 +18,35 @@ zh-CN:
         cell: 手机
         created_at: 创建
         updated_at: 更新
+      prize:
+        city: 城市
+        free_charge: 免单
+        free_charge_ratio: 免单概率
+        fifty_discount: 直减现金50元
+        fifty_discount_ratio: 直减现金50元概率
+        thirty_discount: 直减现金30元
+        thirty_discount_ratio: 直减现金30元概率
+        ten_discount: 直减现金10元
+        ten_discount_ratio: 直减现金10元概率
+        red_envelop: 猴年红包
+        red_envelop_ratio: 猴年红包概率
+        created_at: 创建
+        updated_at: 更新
+      record: 
+        user_id: 用户
+        user: 用户
+        city: 城市
+        prize: 奖励
+        code: 兑奖代码
+        state: 状态
+        created_at: 创建
+        updated_at: 更新
   new_user: 新建用户
   user_list: 用户列表
+  new_prize: 新建奖品
+  prize_list: 奖品列表
+  new_record: 新建记录
+  record_list: 记录列表
   operations: 操作
   login: 登录
   logout: 登出
@@ -32,3 +61,5 @@ zh-CN:
   invalid_name_or_password: 无效的用户名或密码
   please_log_in: 请登录
   america_travel: 美旅
+  receive: 领取
+  search: 搜索
